src/test/deca/context/invalid/BadMultIf.deca
{
    if (true){
        if (true){
            if (true){
                if (true){
                    if (true){
                        if(true){
                            print("jusque la OK");
                            if (!){
                                print("Ah ici pas trop);
                            }
                        }
                    }
                }
            }
        }
    }
}